# AGH-C--ATTiny13-emulator

./: CMakeLists.txt  Documentation.md  README.md
src/: Constants.h  Emulator.cpp  Emulator.h  Instructions.h  Utils.h  main.cpp
src/ATTinyMemory/: ATtiny13.cpp  ATtiny13.h  RegisterAdapter.cpp  RegisterAdapter.h  SRAM.cpp  SRAM.h
src/emulationEnv/: Emulator.cpp  Emulator.h  InstructionSet.cpp  InstructionSet.h
src/hexfile/: HexLoader.cpp  HexLoader.h
src/instruction/: INC.h  Instruction.cpp  Instruction.h  InstructionSet.cpp  InstructionSet.h  Instructions.h  NOP.h  RJMP.h
src/instruction/ALU/: ADC.h  ADD.h  ADIW.h  AND.h  ANDI.h  CLR.h  COM.h  DEC.h  EOR.h  INC.h  NEG.h  OR.h  ORI.h  SBC.h  SBCI.h  SBIW.h  SBR.h  SER.h  SUB.h  SUBI.h  TST.h
src/instruction/bit/: BCLR.h  BST_BLD.h  LSR.h  SBI_CBI.h  SREG_FLGS.h
src/instruction/branch/: Branch.h  CP.h  RET_CALL.h  RJMP.h
src/instruction/memory/: LDI.h  LDS.h  MOV.h  PUSH_POP.h  STS.h
